perf(core): pipeline spot batch admission and coalesce lane settlements